# YardMind

./: .gitignore  README.md  myalgorithm.py  pyproject.toml  wrangler.jsonc
artifacts/: benchmark-sample.json  curated-improvement-benchmark.json
artifacts/demo/: demo-data.json  index.html
artifacts/report/: repair_ablation_comparison.csv
docs/: README.md
docs/Problem Resources/: Problem Statement.txt
docs/analysis/: competition-plan.md  official-parser-readiness.md  problem-framing.md  strategy-options.md
docs/architecture/: data-model.md  system-design.md
examples/: challenge-instance.json  curated-improvement-instance.json  official-hidden-overloaded-bay-instance.json  official-hidden-tight-window-instance.json  official-invalid-stage1-solution.json  official-invalid-stage2-solution.json  official-invalid-stage3-solution.json  official-invalid-stage5-solution.json  official-sample-instance.json  official-search-proof-instance.json  official-search-quality-instance.json  official-stage3-instance.json  realistic-improvement-instance.json  sample-instance.json
scripts/: capture-react-demo.ps1  compare_official_constructive_variants.py  generate-report-pack.ps1  generate_chart_ready_artifacts.py  generate_official_baseline_artifact.py  open-demo.ps1  open-judge-pack.ps1  open-react-demo.ps1  open-submission-rehearsal.ps1  validate-documented-workflow.ps1
tests/: test_benchmark.py  test_demo.py  test_loader_and_feasibility.py  test_local_search.py  test_smoke.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+58 files in other folders)
