[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yardmind"
version = "0.1.0"
description = "Retrieval-aware hybrid optimizer scaffold for OGC 2026"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "YardMind Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]
opt = [
    "numpy>=2.0",
    "ortools>=9.11",
    "pydantic>=2.8",
]

[project.scripts]
yardmind = "yardmind.cli:main"
yardmind-demo = "yardmind.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
